<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif"
        android:text="@string/calculadora"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNumberResult"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="2dp"
        android:text="@string/txtViewNumbersResult"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="164dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="6dp"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@+id/btnEight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/three"
        app:layout_constraintEnd_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/btnEqual"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnAllClear"
        android:layout_width="378dp"
        android:layout_height="46dp"
        android:layout_marginStart="-25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnZero" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:text="@string/multiply"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/subtract"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumberResult" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="39dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumberResult" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/five"
        app:layout_constraintEnd_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:text="@string/divide"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toTopOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="39dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumberResult" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="6dp"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@+id/btnFive"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

</androidx.constraintlayout.widget.ConstraintLayout>